--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   },
   "scripts": {
     "dev": "react-scripts start",
-    "build": "react-scripts build && node ./script/build.js",
+    "build": "react-scripts build",
     "compile": "gulp clean && tsc -d true -p ./src/lib/",
     "package": "gulp clean && tsc -d true -p ./src/lib/ && gulp upgrade_version && npm publish"
   },
